--- a/projeto-portfolio/styles/style.css
+++ b/projeto-portfolio/styles/style.css
@@ -13,12 +13,29 @@ body {
     color: #948C81;
 }
 
+.cabecalho {
+    padding: 2% 0 0 15%;
+
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 80px;
+}
+
+.cabecalho__menu__link {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    color: #728894;
+    text-decoration: none;
+}
+
 .titulo-destaque {
     color: #728894;
 }
 
 .apresentacao {
-    padding: 8% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
