--- a/projeto-portfolio/styles/style.css
+++ b/projeto-portfolio/styles/style.css
@@ -2,6 +2,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root {
+    --cor-primaria: #E1DEDA;
+    --cor-segundaria: #948C81;
+    --cor-terciaria: #728894;
+    --cor-hover: #272727;
+
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,8 +19,8 @@
 
 body {
     box-sizing: border-box;
-    background-color: #E1DEDA;
-    color: #948C81;
+    background-color: var(--cor-primaria);
+    color: var(--cor-segundaria);
 }
 
 .cabecalho {
@@ -24,14 +34,14 @@ body {
 }
 
 .cabecalho__menu__link {
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria)
     font-size: 24px;
-    color: #728894;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
 
 .titulo-destaque {
-    color: #728894;
+    color: var(--cor-terciaria);
 }
 
 .apresentacao {
@@ -50,12 +60,12 @@ body {
 
 .apresentacao__conteudo__titulo {
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria)
 }
 
 .apresentacao__conteudo__texto {
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria)
 }
 
 .apresentacao__links {
@@ -67,7 +77,7 @@ body {
 }
 
 .apresentacao__links__subtitulo {
-    font-family: 'Krona One', sens-serif;
+    font-family: var(--fonte-primaria)
     font-weight: 400;
     font-size: 24px;
 }
@@ -76,32 +86,32 @@ body {
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #728894;
+    border: 2px solid var(--cor-terciaria);
     width: 378px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
     padding: 21.5px 0px;
     text-decoration: none;
-    color: #f6f6f6;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--cor-terciaria);
+    font-family: var(--fonte-secundaria)
     font-weight: 600;
 }
 
 .apresentacao__links__link:hover {
-    background-color: #272727;
+    background-color: var(--cor-hover);
 }
 
 #perfil {
-    width: 485px;
-    height: 500px;
+    height: 620px;
+    width: 465px;
 }
 
 .rodape {
     padding: 24px;
-    color: #000000;
-    background-color: #22d4fd;
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria)
     font-weight: 400;
 }
