--- a/projeto-portfolio/styles/style.css
+++ b/projeto-portfolio/styles/style.css
@@ -35,7 +35,7 @@ body {
 
 .cabecalho__menu__link {
     font-family: var(--fonte-secundaria)
-    font-size: 24px;
+    font-size: 1.5rem;
     color: var(--cor-terciaria);
     text-decoration: none;
 }
@@ -52,19 +52,19 @@ body {
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria)
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria)
 }
 
@@ -79,7 +79,7 @@ body {
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-primaria)
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links__link {
@@ -87,10 +87,10 @@ body {
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 21.5px 0px;
     text-decoration: none;
     color: var(--cor-terciaria);
@@ -102,9 +102,8 @@ body {
     background-color: var(--cor-hover);
 }
 
-#perfil {
-    height: 620px;
-    width: 465px;
+.apresentacao__imagem {
+    width: 50%;
 }
 
 .rodape {
